--- a/scss/_dialog.scss
+++ b/scss/_dialog.scss
@@ -13,6 +13,10 @@
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.08);
     border-radius: 4px;
 
+    @media screen and (max-width:360px){
+        width: 100%;
+    }
+
     &.query {
         float: right;
     }
