--- a/scss/_dialog.scss
+++ b/scss/_dialog.scss
@@ -14,7 +14,8 @@
     border-radius: 4px;
 
     @media screen and (max-width:360px){
-        width: 100%;
+        width: 85%;
+        font-size: 0.9em;
     }
 
     &.query {
